Colaboratory를 통해 생성됨

--- a/(4주차) Conditions(구대환).ipynb
+++ b/(4주차) Conditions(구대환).ipynb
@@ -94,15 +94,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7992ab54-18c3-40ba-b84f-8563fa4fdbcc"
+        "outputId": "902c0d26-3c13-44a2-9b5d-7266799cc614"
       },
       "source": [
         "# Condition Equal\n",
         "\n",
         "a = 5\n",
-        "a == 6 #a 가 6이니? "
+        "a == 6 #a 가 6이니?"
       ],
-      "execution_count": 17,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -112,7 +112,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 1
         }
       ]
     },
@@ -141,7 +141,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bd87f44f-46c4-485d-8cba-6dd6d41863f3"
+        "outputId": "86a81283-185e-4d0c-dc38-af3cb8db1a43"
       },
       "source": [
         "# Greater than Sign\n",
@@ -149,7 +149,7 @@
         "i = 6\n",
         "i > 7"
       ],
-      "execution_count": 19,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -159,7 +159,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 2
         }
       ]
     },
@@ -179,7 +179,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "156435d9-27f9-45a2-8324-2c653f03cd35"
+        "outputId": "69029ff2-dc67-4fd1-ce71-8efa66acef2a"
       },
       "source": [
         "# Greater than Sign\n",
@@ -217,15 +217,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d10a911f-ae2e-4203-d441-6205c57937bb"
+        "outputId": "422aa43b-fbe0-4021-e2cd-a603a26798e3"
       },
       "source": [
         "# Inequality Sign\n",
         "\n",
         "i = 2\n",
-        "i != 2 #!= not equal to... "
+        "i != 2 #!= not equal to..."
       ],
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -235,7 +235,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 4
         }
       ]
     },
@@ -245,7 +245,7 @@
         "id": "3DNtATdQIoPZ"
       },
       "source": [
-        "When <code>i</code> equals 6 the inequality expression produces <b>False</b>. "
+        "When <code>i</code> equals 6 the inequality expression produces <b>False</b>."
       ]
     },
     {
@@ -255,7 +255,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca8c26f2-ee3e-406e-ab95-78cb28e10cf4"
+        "outputId": "41da3d18-23eb-4424-86ca-fada6c8727c4"
       },
       "source": [
         "# Inequality Sign\n",
@@ -263,7 +263,7 @@
         "i = 6\n",
         "i != 6"
       ],
-      "execution_count": 22,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -273,7 +273,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 5
         }
       ]
     },
@@ -293,24 +293,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f3dcdf07-c09f-494b-cd15-df13c5c851a6"
+        "outputId": "e121207c-18dc-459a-8323-e189ba2ec9f2"
       },
       "source": [
         "# Use Equality sign to compare the strings\n",
         "\n",
         "\"ACDC\" == \"Michael Jackson\""
       ],
-      "execution_count": 24,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "True"
+              "False"
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 8
         }
       ]
     },
@@ -330,14 +330,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "54f88ae9-fa5a-4b33-bbaa-308f870c4619"
+        "outputId": "5a18540a-bec8-4826-9822-af83673b0b73"
       },
       "source": [
         "# Use Inequality sign to compare the strings\n",
         "\n",
         "\"ACDC\" != \"Michael Jackson\""
       ],
-      "execution_count": 25,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -347,7 +347,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 9
         }
       ]
     },
@@ -389,32 +389,31 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ea61afc0-5996-44e0-eb6c-790a138287d4"
+        "outputId": "1bd23b46-9dfc-4cf4-d7a5-281a3411d4a2"
       },
       "source": [
         "# If statement example\n",
         "\n",
-        "age = 17\n",
+        "age = 19\n",
         "\n",
         "#expression that can be true or false\n",
         "if age > 18:\n",
         "    #within an indent, we have the expression that is run if the condition is true\n",
         "  print(\"you can enter\" )\n",
         "else:\n",
-        "  print(\"Prohibited\")  \n",
+        "  print(\"Prohibited\")\n",
         "  print(\"okay\")\n",
         "\n",
-        "#The statements after the if statement will run regardless if the condition is true or false \n",
+        "#The statements after the if statement will run regardless if the condition is true or false\n",
         "#print(\"move on\")"
       ],
-      "execution_count": 29,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Prohibited\n",
-            "okay\n"
+            "you can enter\n"
           ]
         }
       ]
@@ -434,7 +433,7 @@
         "id": "NAGlwGoHIoPt"
       },
       "source": [
-        "It is helpful to use the following diagram to illustrate the process. On the left side, we see what happens when the condition is <b>True</b>.  The person enters the ACDC concert representing the code in the indent being executed; they then move on. On the right side, we see what happens when the condition is <b>False</b>; the person is not granted access, and the person moves on. In this case, the segment of code in the indent does not run, but the rest of the statements are run. "
+        "It is helpful to use the following diagram to illustrate the process. On the left side, we see what happens when the condition is <b>True</b>.  The person enters the ACDC concert representing the code in the indent being executed; they then move on. On the right side, we see what happens when the condition is <b>False</b>; the person is not granted access, and the person moves on. In this case, the segment of code in the indent does not run, but the rest of the statements are run."
       ]
     },
     {
@@ -464,7 +463,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5e6fc1ad-8e75-4974-e2e7-118c20cf876d"
+        "outputId": "360bcf36-2a01-4898-f2af-f87cb0bdfd58"
       },
       "source": [
         "# Else statement example\n",
@@ -476,10 +475,10 @@
         "  print(\"you can enter\" )\n",
         "else:\n",
         "  print(\"go see Meat Loaf\" )\n",
-        "    \n",
+        "\n",
         "print(\"move on\")"
       ],
-      "execution_count": 31,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,7 +524,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6823873f-ff77-4d23-9a83-d7be684356a8"
+        "outputId": "9ad07e48-8362-4f4f-e42c-5c72468da1ba"
       },
       "source": [
         "# Elif statment example\n",
@@ -534,16 +533,16 @@
         "\n",
         "if age > 18:\n",
         "    print(\"you can enter\" )\n",
-        "elif age == 18: #else if \n",
+        "elif age == 18: #else if\n",
         "    print(\"go see Pink Floyd\")\n",
         "elif age == 0:\n",
-        "    print(\"this kid cannot leave home\") \n",
+        "    print(\"this kid cannot leave home\")\n",
         "else:\n",
         "    print(\"go see Meat Loaf\" )\n",
-        "    \n",
+        "\n",
         "#print(\"move on\")"
       ],
-      "execution_count": 34,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -588,7 +587,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f0516fb7-93ba-4e3f-c7b0-ded06a5b114f"
+        "outputId": "2c5f6245-2185-4f00-ff57-30f590e8237b"
       },
       "source": [
         "# Condition statement example\n",
@@ -597,10 +596,10 @@
         "\n",
         "if album_year > 1980:\n",
         "    print(\"Album year is greater than 1980\")\n",
-        "    \n",
+        "\n",
         "#print('do something..')"
       ],
-      "execution_count": 36,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,7 +625,7 @@
         "id": "FShiGAhPIoP6"
       },
       "source": [
-        "Notice that the code in the above <b>indented</b> block will only be executed if the results are <b>True</b>. "
+        "Notice that the code in the above <b>indented</b> block will only be executed if the results are <b>True</b>."
       ]
     },
     {
@@ -638,7 +637,7 @@
         "As before, we can add an <code>else</code> block to the <code>if</code> block. The code in the <code>else</code> block will only be executed if the result is <b>False</b>.\n",
         "\n",
         "\n",
-        "<b>Syntax:</b> \n",
+        "<b>Syntax:</b>\n",
         "\n",
         "if (condition):\n",
         "    # do something\n",
@@ -652,7 +651,7 @@
         "id": "F9DtUV5-IoP6"
       },
       "source": [
-        "If the condition in the <code>if</code> statement is <b>False</b>, the statement after the <code>else</code> block will execute. This is demonstrated in the figure: "
+        "If the condition in the <code>if</code> statement is <b>False</b>, the statement after the <code>else</code> block will execute. This is demonstrated in the figure:"
       ]
     },
     {
@@ -686,7 +685,7 @@
         "\n",
         "print('do something..')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +756,7 @@
         "id": "C-WRA30_IoP_"
       },
       "source": [
-        "Let's see how to determine if an album was released after 1979 (1979 is not included) and before 1990 (1990 is not included). The time periods between 1980 and 1989 satisfy this condition. This is demonstrated in the figure below. The green on lines <strong>a</strong> and <strong>b</strong> represents periods where the statement is **True**. The green on line <strong>c</strong> represents where both conditions are **True**, this corresponds to where the green regions overlap. \n",
+        "Let's see how to determine if an album was released after 1979 (1979 is not included) and before 1990 (1990 is not included). The time periods between 1980 and 1989 satisfy this condition. This is demonstrated in the figure below. The green on lines <strong>a</strong> and <strong>b</strong> represents periods where the statement is **True**. The green on line <strong>c</strong> represents where both conditions are **True**, this corresponds to where the green regions overlap.\n",
         "\n"
       ]
     },
@@ -786,7 +785,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "13a2d191-f7d6-4a36-ddc5-8316c159d34b"
+        "outputId": "92fe594b-86af-4443-d4f7-4b824cd1f805"
       },
       "source": [
         "# Condition statement example\n",
@@ -794,11 +793,11 @@
         "album_year = 1991\n",
         "\n",
         "if(album_year > 1979) and (album_year < 1990):\n",
-        "    print (\"Album year was in between 1980 and 1989\")   \n",
+        "    print (\"Album year was in between 1980 and 1989\")\n",
         "else:\n",
         "    print(\"this is not the case\")"
       ],
-      "execution_count": 39,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -815,7 +814,7 @@
         "id": "dsdLz0zBIoQE"
       },
       "source": [
-        "To determine if an album was released before 1980 (~ - 1979) or after 1989 (1990 - ~), an **or** statement can be used. Periods before 1980 (~ - 1979) or after 1989 (1990 - ~) satisfy this condition. This is demonstrated in the following figure, the color green in <strong>a</strong> and <strong>b</strong> represents periods where the statement is true. The color green in **c** represents where at least one of the conditions \n",
+        "To determine if an album was released before 1980 (~ - 1979) or after 1989 (1990 - ~), an **or** statement can be used. Periods before 1980 (~ - 1979) or after 1989 (1990 - ~) satisfy this condition. This is demonstrated in the following figure, the color green in <strong>a</strong> and <strong>b</strong> represents periods where the statement is true. The color green in **c** represents where at least one of the conditions\n",
         "are true.  \n"
       ]
     },
@@ -844,7 +843,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "372e399c-4804-429a-f82c-a38acb7aca5f"
+        "outputId": "550a3df5-9081-4ce5-a2a6-f674f1bcb2bc"
       },
       "source": [
         "# Condition statement example\n",
@@ -856,7 +855,7 @@
         "else:\n",
         "    print(\"The Album was made in the 1980's \")"
       ],
-      "execution_count": 41,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -883,7 +882,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e65710a8-78fa-4877-8159-b42e081267a6"
+        "outputId": "5765b4a3-f9d0-4ed7-84d7-595b979a4e21"
       },
       "source": [
         "# Condition statement example\n",
@@ -893,7 +892,7 @@
         "if not (album_year == '1984'):\n",
         "    print (\"Album year is not 1984\")"
       ],
-      "execution_count": 42,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -935,19 +934,25 @@
       "cell_type": "code",
       "metadata": {
         "id": "uM3HRp4iIoQK",
-        "outputId": "e8c776bd-00ae-4fe7-ab48-aacfaaa1b6c3"
+        "outputId": "4d8357cf-fb3c-4fe6-967a-39281db69ad2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "rating = 8.5\n",
+        "if rating > 8:\n",
+        "    print (\"This album is Amazing!\")"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "This album is Amazing!\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -959,7 +964,7 @@
       "source": [
         "Double-click __here__ for the solution.\n",
         "\n",
-        "<!-- \n",
+        "<!--\n",
         "rating = 8.5\n",
         "if rating > 8:\n",
         "    print (\"This album is Amazing!\")\n",
@@ -988,19 +993,27 @@
       "cell_type": "code",
       "metadata": {
         "id": "s4NbZlNLIoQO",
-        "outputId": "798bff22-e744-4d63-d211-9c849c529e78"
+        "outputId": "37458e1f-c378-4fb3-8d2e-c08c962398f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "rating = 8.5\n",
+        "if rating > 8:\n",
+        "    print (\"this album is amazing\")\n",
+        "else:\n",
+        "    print (\"this album is ok\")"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "this album is ok\n"
-          ],
-          "name": "stdout"
+            "this album is amazing\n"
+          ]
         }
       ]
     },
@@ -1012,7 +1025,7 @@
       "source": [
         "Double-click __here__ for the solution.\n",
         "\n",
-        "<!-- \n",
+        "<!--\n",
         "rating = 8.5\n",
         "if rating > 8:\n",
         "    print (\"this album is amazing\")\n",
@@ -1043,19 +1056,26 @@
       "cell_type": "code",
       "metadata": {
         "id": "w0ys9FArIoQS",
-        "outputId": "57c1b839-069f-497a-b05a-d89b4715f6f1"
+        "outputId": "41f04807-ace9-410c-e460-86101d5a3a93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "album_year = 1979\n",
+        "\n",
+        "if album_year < 1980 or album_year == 1991 or album_year == 1993:\n",
+        "    print (\"this album came out already\")"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "this album came out already\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -1067,7 +1087,7 @@
       "source": [
         "Double-click __here__ for the solution.\n",
         "\n",
-        "<!-- \n",
+        "<!--\n",
         "album_year = 1979\n",
         "\n",
         "if album_year < 1980 or album_year == 1991 or album_year == 1993:\n",
