--- a/(5주차) Loops(구대환).ipynb
+++ b/(5주차) Loops(구대환).ipynb
@@ -78,7 +78,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bc08098a-7deb-4fe0-a2e3-1c18d4e5d4cb"
+        "outputId": "fd8f65bb-9143-4558-916f-9b27230d6b4b"
       },
       "source": [
         "# Use the range ([0, 1, 2])\n",
@@ -86,7 +86,7 @@
         "test=range(3)\n",
         "test"
       ],
-      "execution_count": 16,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -96,7 +96,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 1
         }
       ]
     },
@@ -144,18 +144,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9af88ca7-dffc-4b32-910a-621a8ba9832a"
+        "outputId": "951877f1-b3ea-4fd7-d8d1-6ec072d88cfb"
       },
       "source": [
         "# For loop example\n",
         "\n",
-        "dates = [1982,1980,1973] #List[0] =1982 \n",
-        "N = len(dates) #3 \n",
+        "dates = [1982,1980,1973] #List[0] =1982\n",
+        "N = len(dates) #3\n",
         "\n",
-        "for i in range(N): #range(3) = [0, 1, 2] list --> i는 list에 있는 첫번째 값인 0, 그 다음에는 두번째 값인 1, 그 다음에는 세번째 값인 2 \n",
+        "for i in range(N): #range(3) = [0, 1, 2] list --> i는 list에 있는 첫번째 값인 0, 그 다음에는 두번째 값인 1, 그 다음에는 세번째 값인 2\n",
         "    print(dates[i]) # i=0 , i =1 , i =2   --> dates[0] = 1982, dates[1] = 1980, dates[2] =1973\n"
       ],
-      "execution_count": 21,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,15 +202,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2305719b-58f9-4e2a-c863-0d00ec7b38c3"
+        "outputId": "e10575c3-5999-4d51-c40b-0d394d418d57"
       },
       "source": [
         "# Example of for loop\n",
         "\n",
-        "for i in range(0, 8): \n",
+        "for i in range(0, 8):\n",
         "    print(\"i is equal to\", i)"
       ],
-      "execution_count": 24,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,7 +234,7 @@
         "id": "0TWdrINfLav9"
       },
       "source": [
-        "In Python we can directly access the elements in the list as follows: "
+        "In Python we can directly access the elements in the list as follows:"
       ]
     },
     {
@@ -244,15 +244,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "34b67ce3-452b-449e-f963-d4913b7c10de"
+        "outputId": "dce49b6e-058a-470b-af3a-544d437cd7dc"
       },
       "source": [
         "# Exmaple of for loop, loop through list\n",
         "\n",
-        "for year in dates:  #이것을 가장 자주 사용한다. \n",
-        "    print(year)   "
+        "for year in dates:  #이것을 가장 자주 사용한다.\n",
+        "    print(year)"
       ],
-      "execution_count": 25,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +299,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f5d6ad1f-890d-498e-fe6b-ee37e12f41ce"
+        "outputId": "3abab186-1c2e-47a9-b2cb-a744e8b06f0f"
       },
       "source": [
         "# Use for loop to change the elements in list\n",
@@ -311,7 +311,7 @@
         "    squares[i] = 'weight'\n",
         "    print(\"After square \", i, 'is',  squares[i])"
       ],
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,12 +338,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d023c13e-5ea8-460e-9825-392c2f82323e"
+        "outputId": "3c4c9d7f-e857-4525-ec29-a66cdd0d5054"
       },
       "source": [
         "squares"
       ],
-      "execution_count": 27,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -353,7 +353,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 6
         }
       ]
     },
@@ -364,7 +364,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e1f6e9fe-c7c7-45e2-f5b8-b3adb746513f"
+        "outputId": "943575f8-2264-4b8a-dd87-f6a122e0ec6a"
       },
       "source": [
         "squares = ['red', 'yellow', 'green', 'purple', 'blue']\n",
@@ -372,10 +372,10 @@
         "for i in squares:\n",
         "  print(\"Before square is: \", i)\n",
         "for i in range(0,5):\n",
-        "  squares[i] = i* \"what the heck!\" \n",
+        "  squares[i] = i* \"what the heck!\"\n",
         "  print(squares[i])"
       ],
-      "execution_count": 28,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,10 +429,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "87806089-4ace-4df2-a925-34f691432a7d"
+        "outputId": "e985d477-8a19-41b0-8e71-9955d47c68bf"
       },
       "source": [
-        "# While Loop Example \n",
+        "# While Loop Example\n",
         "\n",
         "dates = [1982, 1980, 1973, 2000]\n",
         "\n",
@@ -440,13 +440,13 @@
         "year = 0\n",
         "\n",
         "while(year != 2000):\n",
-        "    year = dates[i] #1982, 1980, 1973, 2000  \n",
-        "    i = i + 1 #i =1, 2, 3, 4 \n",
-        "    print(year) #1982, 1980, 1973, 2000  \n",
+        "    year = dates[i] #1982, 1980, 1973, 2000\n",
+        "    i = i + 1 #i =1, 2, 3, 4\n",
+        "    print(year) #1982, 1980, 1973, 2000\n",
         "\n",
         "print(\"It took \", i ,\"repetitions to get out of loop.\")"
       ],
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,13 +509,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QIXNfubLLawQ"
+        "id": "QIXNfubLLawQ",
+        "outputId": "26f85691-8cec-4dcd-a951-d15bfbd0c20c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "for i in range(-5, 6):\n",
+        "    print(i)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-5\n",
+            "-4\n",
+            "-3\n",
+            "-2\n",
+            "-1\n",
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -524,7 +548,7 @@
       },
       "source": [
         "Double-click __here__ for the solution.\n",
-        "<!-- \n",
+        "<!--\n",
         "for i in range(-5, 6):\n",
         "    print(i)\n",
         "-->"
@@ -544,13 +568,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "y1P9DewULawT"
+        "id": "y1P9DewULawT",
+        "outputId": "10b86bba-891f-4d03-a263-77ac90083b09",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "Genres = ['rock', 'R&B', 'Soundtrack', 'R&B', 'soul', 'pop']\n",
+        "for Genre in Genres:\n",
+        "    print(Genre)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rock\n",
+            "R&B\n",
+            "Soundtrack\n",
+            "R&B\n",
+            "soul\n",
+            "pop\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -559,7 +603,7 @@
       },
       "source": [
         "Double-click __here__ for the solution.\n",
-        "<!-- \n",
+        "<!--\n",
         "Genres = ['rock', 'R&B', 'Soundtrack', 'R&B', 'soul', 'pop']\n",
         "for Genre in Genres:\n",
         "    print(Genre)\n",
@@ -587,13 +631,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "E0MCFnuqLawW"
+        "id": "E0MCFnuqLawW",
+        "outputId": "09ceae2b-1415-49b9-a3d4-0387433500ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "\n",
+        "squares=['red', 'yellow', 'green', 'purple', 'blue']\n",
+        "for square in squares:\n",
+        "    print(square)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "red\n",
+            "yellow\n",
+            "green\n",
+            "purple\n",
+            "blue\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -602,7 +666,7 @@
       },
       "source": [
         "Double-click __here__ for the solution.\n",
-        "<!-- \n",
+        "<!--\n",
         "squares=['red', 'yellow', 'green', 'purple', 'blue']\n",
         "for square in squares:\n",
         "    print(square)\n",
@@ -630,13 +694,37 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5Kw0DO-ALawa"
+        "id": "5Kw0DO-ALawa",
+        "outputId": "b8dc44e8-b112-43ff-864c-13298a2349ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# Write your code below and press Shift+Enter to execute"
+        "# Write your code below and press Shift+Enter to execute\n",
+        "\n",
+        "PlayListRatings = [10, 9.5, 10, 8, 7.5, 5, 10, 10]\n",
+        "i = 1\n",
+        "Rating = PlayListRatings[0]\n",
+        "while(Rating >= 6):\n",
+        "    print(Rating)\n",
+        "    Rating = PlayListRatings[i]\n",
+        "    i = i + 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9.5\n",
+            "10\n",
+            "8\n",
+            "7.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -645,7 +733,7 @@
       },
       "source": [
         "Double-click __here__ for the solution.\n",
-        "<!-- \n",
+        "<!--\n",
         "PlayListRatings = [10, 9.5, 10, 8, 7.5, 5, 10, 10]\n",
         "i = 1\n",
         "Rating = PlayListRatings[0]\n",
@@ -677,16 +765,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oIB8hw4mLawf"
+        "id": "oIB8hw4mLawf",
+        "outputId": "22d4eac5-0e50-4d2b-aade-596006e56ec3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Write your code below and press Shift+Enter to execute\n",
         "\n",
         "squares = ['orange', 'orange', 'purple', 'blue ', 'orange']\n",
-        "new_squares = []"
+        "new_squares = []\n",
+        "i = 0\n",
+        "while(squares[i] == 'orange'):\n",
+        "    new_squares.append(squares[i])\n",
+        "    i = i + 1\n",
+        "print (new_squares)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['orange', 'orange']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -695,7 +800,7 @@
       },
       "source": [
         "Double-click __here__ for the solution.\n",
-        "<!-- \n",
+        "<!--\n",
         "squares = ['orange', 'orange', 'purple', 'blue ', 'orange']\n",
         "new_squares = []\n",
         "i = 0\n",
