Colaboratory를 통해 생성됨

--- a/(6주차) Functions(구대환).ipynb
+++ b/(6주차) Functions(구대환).ipynb
@@ -1525,13 +1525,14 @@
       "metadata": {
         "id": "DjEVRC9FOsN-",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 252
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6c5e4820-2b61-4fb8-a1fd-dbed70eb4a7c"
+        "outputId": "b52a65a1-9cef-40ee-9e7e-01ebd73732fb"
       },
       "source": [
         "# Example of local variable\n",
+        "\n",
+        "myFavouriteBand2 = \"QUEEN\" #global\n",
         "\n",
         "def getBandRating(bandname):\n",
         "    myFavouriteBand2 = \"AC/DC\" #local variable\n",
@@ -1544,25 +1545,15 @@
         "print(\"Deep Purple's rating is: \", getBandRating(\"Deep Purple\"))\n",
         "print(\"My favourite band is\", myFavouriteBand2)"
       ],
-      "execution_count": 45,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "AC/DC's rating is:  10.0\n",
-            "Deep Purple's rating is:  0.0\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-45-f9d0bbad2488>\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"AC/DC's rating is: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgetBandRating\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"AC/DC\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Deep Purple's rating is: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgetBandRating\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Deep Purple\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"My favourite band is\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmyFavouriteBand2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'myFavouriteBand2' is not defined"
+            "Deep Purple's rating is:  0.0\n",
+            "My favourite band is QUEEN\n"
           ]
         }
       ]
@@ -1580,10 +1571,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "GEWCPPfFOsOA",
-        "outputId": "76b04ab1-ffce-4491-88b0-defd9f9cf54f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "76b04ab1-ffce-4491-88b0-defd9f9cf54f"
       },
       "source": [
         "# Example of global variable and local variable with the same name\n",
@@ -1639,10 +1630,11 @@
       },
       "source": [
         "# Write your code below and press Shift+Enter to execute\n",
-        "def div(a, b):\n",
-        "    return(a/b)"
+        "def divide(a,b):\n",
+        "    return(a/b)\n",
+        "    divide (6,2)"
       ],
-      "execution_count": 13,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -1704,26 +1696,27 @@
       "cell_type": "code",
       "metadata": {
         "id": "bbQ3MsrDOsOL",
-        "outputId": "32128b3a-197a-4fc9-a235-7bc461e53ff0",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 145
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d84b31fe-8bf3-438e-d947-2179c2aa060e"
       },
       "source": [
         "# Write your code below and press Shift+Enter to execute\n",
-        "yes, for example:\n",
+        "# yes, for example:\n",
         "con(2, 2)"
       ],
-      "execution_count": 48,
+      "execution_count": 57,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-48-56c0a5efb712>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    yes, for example:\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
         }
       ]
     },
@@ -1763,26 +1756,27 @@
       "cell_type": "code",
       "metadata": {
         "id": "dhmsJzmLOsOO",
-        "outputId": "1de5b937-0483-4723-a053-5b9fc111c4cc",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 145
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5cfc739e-2a6b-45c0-e163-1a91389900c0"
       },
       "source": [
         "# Write your code below and press Shift+Enter to execute\n",
-        "yes,for example:\n",
+        "#yes,for example:\n",
         "con(['a', 1], ['b', 1])"
       ],
-      "execution_count": 49,
+      "execution_count": 58,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-49-b5d242b98800>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    yes,for example:\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', 1, 'b', 1]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
         }
       ]
     },
