--- a/(7주차) WriteFile(구대환).ipynb
+++ b/(7주차) WriteFile(구대환).ipynb
@@ -67,13 +67,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "523083f1-59c8-458b-d8c8-8626d500317c"
+        "outputId": "7da8d0b7-bd30-4414-ff80-95d9803af479"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
         "with open('/content/gdrive/My Drive/Colab Notebooks/example2.txt', 'w') as writefile:\n",
         "    writefile.write(\"This is line A\")"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "441fae56-5c9a-40e6-c054-210d62813d9c"
+        "outputId": "7f744108-d11d-48ce-b9a0-6b562e500753"
       },
       "source": [
         "# Read file\n",
@@ -122,7 +122,7 @@
         "with open('/content/gdrive/My Drive/Colab Notebooks/example2.txt', 'r') as testwritefile:\n",
         "    print(testwritefile.read())"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +155,7 @@
         "    writefile.write(\"This is line B\\n\")\n",
         "    writefile.write(\"This is line 10\\n\")"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -182,13 +182,17 @@
         "id": "LvJAu2n8bl2V"
       },
       "source": [
-        "You can check the file to see if your results are correct "
+        "You can check the file to see if your results are correct"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "EQBM_Ynabl2W"
+        "id": "EQBM_Ynabl2W",
+        "outputId": "99f844bd-7f90-4966-a791-2859b7d4d2ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Check whether write to file\n",
@@ -196,8 +200,16 @@
         "with open('/content/gdrive/My Drive/Colab Notebooks/example2.txt', 'r') as testwritefile:\n",
         "    print(testwritefile.read())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is line A\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -219,7 +231,7 @@
         "with open('/content/gdrive/My Drive/Colab Notebooks/example2.txt', 'a') as testwritefile:\n",
         "    testwritefile.write(\"This is line C\\n\")"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -234,7 +246,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QR21o9UVbl2c"
+        "id": "QR21o9UVbl2c",
+        "outputId": "fd129c49-bc2a-452f-a2b0-9b88cd01baa5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Verify if the new line is in the text file\n",
@@ -242,8 +258,17 @@
         "with open('/content/gdrive/My Drive/Colab Notebooks/example2.txt', 'r') as testwritefile:\n",
         "    print(testwritefile.read())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is line AThis is line C\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -261,7 +286,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "da0fecae-2dd4-49f9-cb86-e9800adf05d1"
+        "outputId": "c1b70944-7983-44e6-c7ad-a13e204889fd"
       },
       "source": [
         "# Sample list of text\n",
@@ -269,7 +294,7 @@
         "Lines = [\"This is line A\\n\", \"This is line B\\n\", \"This is line C\\n\"]\n",
         "Lines"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -279,7 +304,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ]
     },
@@ -290,7 +315,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "60710a14-f3cf-4d5c-a059-187b1b60e050"
+        "outputId": "c0bfe0f0-def6-41cf-94e4-bb006e0de973"
       },
       "source": [
         "# Write the strings in the list to text file\n",
@@ -300,7 +325,7 @@
         "        print(line)\n",
         "        writefile.write(line)"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -332,7 +357,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2e6deca8-502c-4f31-b038-c2a2c48fa7c9"
+        "outputId": "b0e3fb88-2089-4cf1-d511-061c889bedd9"
       },
       "source": [
         "# Verify if writing to file is successfully executed\n",
@@ -340,7 +365,7 @@
         "with open('/content/gdrive/My Drive/Colab Notebooks/example11.txt', 'r') as testwritefile:\n",
         "    print(testwritefile.read())"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -374,7 +399,7 @@
         "with open('/content/gdrive/My Drive/Colab Notebooks/example11.txt', 'a') as testwritefile:\n",
         "    testwritefile.write(\"This is line D\\n\")"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -383,22 +408,38 @@
         "id": "d3Z87L3jbl2q"
       },
       "source": [
-        "We can see the results of appending the file: "
+        "We can see the results of appending the file:"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tijFPWqHbl2q"
+        "id": "tijFPWqHbl2q",
+        "outputId": "7fd4641f-0f5b-4fb6-e503-99e8cf3826bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "# Verify if the appending is successfully executed\n",
         "\n",
-        "with open('/content/gdrive/My Drive/Colab Notebooks/example3.txt', 'r') as testwritefile:\n",
+        "with open('/content/gdrive/My Drive/Colab Notebooks/example11.txt', 'r') as testwritefile:\n",
         "    print(testwritefile.read())"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is line A\n",
+            "This is line B\n",
+            "This is line C\n",
+            "This is line D\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -415,7 +456,7 @@
         "id": "5mndIszabl2s"
       },
       "source": [
-        "<h2 id=\"copy\">Copy a File</h2> "
+        "<h2 id=\"copy\">Copy a File</h2>"
       ]
     },
     {
@@ -440,7 +481,7 @@
         "          for line in readfile:\n",
         "                writefile.write(line)"
       ],
-      "execution_count": 12,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -459,7 +500,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5895b1bd-3fc8-4dc0-8de5-08d60e46cfcd"
+        "outputId": "942e2bb7-7640-418d-f18e-18aa93a4b0a9"
       },
       "source": [
         "# Verify if the copy is successfully executed\n",
@@ -467,7 +508,7 @@
         "with open('/content/gdrive/My Drive/Colab Notebooks/example12.txt','r') as testwritefile:\n",
         "    print(testwritefile.read())"
       ],
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,9 +535,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PPAmTuuw8925",
-        "outputId": "a4176c01-654d-4f12-e8b8-7cfff9907561"
+        "outputId": "de4453b6-31d1-45f9-ec8e-788eb8c3df88"
       },
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
