Colaboratory를 통해 생성됨

--- a/과제_(10주차) class (구대환).ipynb
+++ b/과제_(10주차) class (구대환).ipynb
@@ -27,13 +27,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eOEN37wLyeGF",
-        "outputId": "96edbbf2-4188-48f4-9325-9903b738ebe1"
+        "outputId": "84977271-55e1-4073-e2a8-66f3eeb7ef10"
       },
       "outputs": [
         {
@@ -58,15 +58,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "GG9Pbe5oyeGH",
-        "outputId": "b605b9b7-411a-4739-9da7-3cd1e38cfa5b"
+        "outputId": "bd6b2168-3aee-4662-b117-afe36a5df1c5"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "3\n",
             "7\n",
